# odoo

./: .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  .weblate.json  CLAUDE.md  CONTEXT_RESUME.md  eslint.config.mjs  mypy.ini  package-lock.json  package.json  pytest.ini  requirements.txt  ruff.toml  setup.py  tsconfig.json  tsconfig.noimplicitany.json  tsconfig.strict.json
.github/workflows/: architecture.yml  doc_links.yml  freethreading.yml  integration_tests.yml  lint.yml  py_typecheck.yml  ruff.yml  rust.yml  service_types.yml  typecheck.yml  unit_tests.yml
addons/: conftest.py
addons/account/: __init__.py  __manifest__.py
addons/account_edi_ubl_cii/: __manifest__.py
addons/account_payment_interco/: __manifest__.py
addons/account_peppol/: __init__.py  __manifest__.py
addons/account_qr_code_sepa/: __manifest__.py
addons/analytic/: __manifest__.py
addons/api_doc/: __manifest__.py
addons/auth_passkey/: __manifest__.py
crates/odoo_rust/: Cargo.toml  pyproject.toml
crates/odoo_rust/src/: cache.rs  clone.rs  ids.rs  lib.rs  prefetch.rs  rows.rs  scan.rs  sort.rs  web.rs
debian/: control  copyright  odoo.links
doc/: coding_guidelines.rst
odoo/: ARCHITECTURE.md  _testing_bootstrap.py  exceptions.py  init.py  logging.py  logutils.py  release.py  sql_db.py
setup/: odoo-wsgi.example.py  package.py  requirements-check.py
tests/: conftest.py
tooling/: noimplicitany_allowlist.txt  strict_allowlist.txt
tools/: esm_lazy_bundle.mjs  fa4_fix_dynamic.py  fa4_fix_icon_attrs.py  fa4_fix_statics.py  fa4_to_fa7.py
(+30644 files in other folders)
