[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "odoo_rust"
version = "0.1.0"
requires-python = ">=3.14"

[tool.maturin]
# enables the crate's `extension-module` feature (→ pyo3/extension-module) for
# the wheel; bare cargo invocations leave it off so the test harness can link.
features = ["extension-module"]
